--- a/Public/privacy.html
+++ b/Public/privacy.html
@@ -30,7 +30,7 @@
 
     <section>
         <h3 class="heading">Information We Collect</h3>
-        <p class="terms-info">We may collect personal information, including your name, email address, and contact information when you use our website. Additionally, we may collect non-personal information such as your browser, operating system, and IP address.</p>
+        <p class="terms-info">We do not collect your personal information and do not use any tracking software. You are not being tracked with us; however, your data still might be collected by your browser. Please note that Google Analytics or other platforms may track your online activity and collect data for analytical purposes while you're browsing our site. They may collect personal information, including your name, email address, and contact information when you use our website. Additionally, they may collect non-personal information such as your browser, operating system, and IP address. You can't opt out until you disable the 'Do Not Track' feature in your browser. </p>
     </section>
 
     <section>
@@ -40,12 +40,12 @@
 
     <section>
         <h3 class="heading">Data Security</h3>
-        <p class="terms-info">We take appropriate measures to secure your data, but please be aware that no method of data transmission over the internet is completely secure.</p>
+        <p class="terms-info">As we do not collect your personal information, we do not use it to communicate with you or process orders. However, the personal and non-personal information collected may be used by third parties for analytics and website optimization.</p>
     </section>
 
     <section>
         <h3 class="heading">Cookies</h3>
-        <p class="terms-info">We may use cookies and similar technologies to enhance your browsing experience and collect information about your preferences.</p>
+        <p class="terms-info">Your browser, along with services like Google Analytics and others, may use cookies and similar technologies to improve your browsing experience and gather information regarding your preferences.</p>
     </section>
 
     <section>
@@ -60,14 +60,15 @@
 
     <section>
         <h3 class="heading">Contact Us</h3>
-        <p class="terms-info">If you have questions or concerns about this Privacy Policy or your personal information, please contact us at <a>customersupport@vfshop.com.</a><br> </p>
+        <p class="terms-info">If you have questions or concerns about this Privacy Policy or your personal information, please google for assistance. We do not provide customer support, and all the contacts in Contact section are dummy.</a><br> </p>
         <p class="terms-info">Thank you for trusting VF Shop with your information. We are committed to maintaining your privacy and providing you with the best possible experience.<br> </p>
     </section>
 
 
     <footer></footer>
-    <script src="js/nav.js"></script>
-    <script src="js/footer.js"></script>
+    <script src="../js/nav.js"></script>
+    <script src="../js/footer.js"></script>
+    <script src="../js/search.js"></script>
 
 </body>
 </html>
