--- a/Public/terms.html
+++ b/Public/terms.html
@@ -46,7 +46,7 @@
 
     <section>
         <h3 class="heading">4. Disclaimer</h3>
-        <p class="terms-info">This project offers educational content only. VF Shop and its developers are not liable for any consequences related to the use of this website.</p>
+        <p class="terms-info">This website is a demonstration site created for educational purposes to enhance front-end development skills. VF Shop and its developers are not liable for any consequences related to the use of this website.</p>
     </section>
 
     <section>
@@ -55,20 +55,27 @@
     </section>
 
     <section>
-        <h3 class="heading">6. Changes to Terms</h3>
+        <h3 class="heading">6. Image Attribution</h3>
+        <p class="terms-info">The hero images used on this site are sourced from <a href="https://www.freepik.com">Freepik</a>. The product images used on this site are sourced from the internet and do not belong to us.
+            We do not have rights to these images, and it is not recommended to copy or use them without proper authorization.</p>
+    </section>
+
+    <section>
+        <h3 class="heading">7. Changes to Terms</h3>
         <p class="terms-info">We may revise these terms for our educational pilot project at any time without notice. </p>
     </section>
 
     <section>
-        <h3 class="heading">7. Contact Us</h3>
-        <p class="terms-info">Have questions? Contact our support team for assistance.<br> </p>
+        <h3 class="heading">8. Contact Us</h3>
+        <p class="terms-info">Have questions? Please google for assistance. We do not provide customer support, and all the contacts in Contact section are dummy.<br> </p>
         <p class="terms-info">Thanks for choosing VF Shop website. Explore and discover the world of fashion.<br> </p>
     </section>
 
 
     <footer></footer>
-    <script src="js/nav.js"></script>
-    <script src="js/footer.js"></script>
+    <script src="../js/nav.js"></script>
+    <script src="../js/footer.js"></script>
+    <script src="../js/search.js"></script>
 
 </body>
 </html>
