Add: Cart&Wishlist count handle

--- a/Public/product.html
+++ b/Public/product.html
@@ -57,6 +57,7 @@
             <label for="xxxl-size" class="size-radio-btn">xxxl</label>
 
             <div class="size-error-msg">Please select a size.</div>
+            <div class="count-error-msg"></div>
 
             <div class="btn-group">
                 <button class="btn cart-btn">Add to Cart</button>
